[gd_scene load_steps=9 format=3 uid="uid://cmtc1he8psiam"]

[ext_resource type="Script" path="res://scenes/Menu_Scenes/Death_menu/Death_Menu.gd" id="1_l5u32"]
[ext_resource type="Texture2D" uid="uid://sln78d0832ot" path="res://assets/Menu_Items/Main_Menu/Retry_Button.png" id="3_cubu4"]
[ext_resource type="Texture2D" uid="uid://dtdiitam4h3jt" path="res://assets/Menu_Items/Death_Menu/YouDied.png" id="3_jbx5l"]
[ext_resource type="Texture2D" uid="uid://bguwm80fa8y5h" path="res://assets/Menu_Items/Main_Menu/Start_Button.png" id="4_jagbq"]
[ext_resource type="Texture2D" uid="uid://srknxr48kitn" path="res://assets/Menu_Items/Main_Menu/Exit_Button.png" id="6_gchg3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_42v7q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kueys"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hsql0"]
texture = ExtResource("4_jagbq")

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3

[node name="DeathScene" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5u32")

[node name="TextureRect" type="TextureRect" parent="DeathScene"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DeathScene"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03125
anchor_top = -0.921296
anchor_right = 0.860243
anchor_bottom = 1.33333
offset_top = 252.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="DeathScene/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_jbx5l")
expand_mode = 4
stretch_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="DeathScene"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0173611
anchor_top = -1.06944
anchor_right = 1.01389
anchor_bottom = 1.25309
offset_top = 252.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="DeathScene/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DeathScene/MarginContainer2/ButtonsVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start_Button" type="Button" parent="DeathScene/MarginContainer2/ButtonsVBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_42v7q")
icon = ExtResource("3_cubu4")
flat = true

[node name="Exit_Button" type="Button" parent="DeathScene/MarginContainer2/ButtonsVBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_kueys")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hsql0")
icon = ExtResource("6_gchg3")
flat = true
